tests/ui/attributes/pass-indirectly.x86_64.stderr
error: `#[rustc_pass_indirectly_in_non_rustic_abis]` can only be applied to `struct`s
  --> $DIR/pass-indirectly.rs:17:1
   |
LL | #[rustc_pass_indirectly_in_non_rustic_abis]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | fn not_a_struct() {}
   | -------------------- is not a `struct`

error: aborting due to 1 previous error

